tests/NormalTests/paczka1/small_fuzzy/50731621.err
Error in line 15: hb1T6cmOg7m S633 50,3
